Improved JS, SCSS, webpack

--- a/stylesheets/scss/components/_menu.scss
+++ b/stylesheets/scss/components/_menu.scss
@@ -2,7 +2,7 @@
  * Menus
  *
  * https://material.io/guidelines/components/menus.html
- */
+ **************************************/
 
 .menu {
 	background: if( $var == true, var(--background, $background), $background);
