--- a/stylesheets/scss/components/_typography.scss
+++ b/stylesheets/scss/components/_typography.scss
@@ -179,7 +179,7 @@
 }
 
 @if( in-array( 'button', $typography ) ) {
-	.raised-button, .flat-button {
+	.button, .raised-button, .flat-button {
 		@include font($font-size-button, 0, $font-weight-button, $line-height-button, $font-color-button, $letter-spacing-button, uppercase);
 	}
 }
