Redid bottom sheet

--- a/stylesheets/scss/components/_navigation-drawer.scss
+++ b/stylesheets/scss/components/_navigation-drawer.scss
@@ -542,8 +542,8 @@ $drawers: '';
 
 	.divider {
 		margin: ( $gutter / 2 ) 0;
-		height: rem-calc(1px);
-		background: if($theme == light, rgba($black, .12), rgba($white, .12));
+		height: $divider-height;
+		background: $divider-color;
 	}
 
 	.menu {
