--- a/stylesheets/scss/components/_bottom-sheet.scss
+++ b/stylesheets/scss/components/_bottom-sheet.scss
@@ -4,49 +4,34 @@
  * http://www.google.com/design/spec/components/bottom-sheets.html
  **************************************/
 
-.bottom-sheet {
-	@include transition(margin $transition-small-duration $standard-transition);
+.bottom-sheet, .bottom-sheet-grid { @include transition(margin $transition-small-duration $standard-transition);
 	@include material-shadow(16);
 	background: $bottom-sheet-background;
 	bottom: 0;
-    display: block;
-	font-size: $bottom-sheet-font-size;
-	font-weight: $bottom-sheet-font-weight;
+	display: block;
 	margin: 0 auto -102% auto;
 	height: auto;
 	left: 0;
 	overflow: inherit;
-	padding: $bottom-sheet-padding;
 	position: fixed;
 	right: 0;
 	width: 100%;
-	color: $bottom-sheet-font-color;
 	z-index: 5;
-
-	/*@media #{$medium-down} {
-		&:before {
-			position: absolute;
-			top: 0;
-			left: 0;
-			@include square(100%);
-			background: rgba($black, .2);
-		}
-	}*/
 
 	@if( $amp == false ) {
 		@media #{$medium-only} {
 			@include transition(margin $transition-medium-duration $standard-transition);
-			width: 60%;
+			max-width: 60%;
 		}
 
 		@media #{$medium-up} {
 			@include transition(margin $transition-large-duration $standard-transition);
-			width: 40%;
+			max-width: 40%;
 			@include border-radius-top( if( $var == true, var(--border-size, $border-size), $border-size ) );
 		}
 	}
 
-	&-background {
+	.bottom-sheet-background {
 		background: rgba($black, .20);
 		@include square(100%);
 		top: 0;
@@ -74,176 +59,132 @@
 			visibility: visible;
 		}
 	}
+}
 
-	ul {
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
+@if( in-array( 'bottom-sheet', $bottom-sheet ) ) {
+	.bottom-sheet {
+		padding: $bottom-sheet-padding;
 
-		li {
+		a {
+			color: $bottom-sheet-color;
 			font-size: $bottom-sheet-font-size;
 			font-weight: $bottom-sheet-font-weight;
+			@include transition(color $transition-small-duration $standard-transition);
+
+			@if ($amp == false) {
+				@media #{$medium-only} {
+					@include transition(color $transition-medium-duration $standard-transition);
+				}
+
+				@media #{$medium-up} {
+					@include transition(color $transition-large-duration $standard-transition);
+				}
+			}
+
+			&:hover, &:hover .material-icons {
+				color: inherit;
+			}
+		}
+
+		.material-icons {
+			font-size: $bottom-sheet-icon-size;
+			@include square($bottom-sheet-icon-size);
+			margin: $bottom-sheet-icon-margin;
+			@include transition(color $transition-small-duration $standard-transition);
+
+			@if ($amp == false) {
+				@media #{$medium-only} {
+					@include transition(color $transition-medium-duration $standard-transition);
+				}
+
+				@media #{$medium-up} {
+					@include transition(color $transition-large-duration $standard-transition);
+				}
+			}
+		}
+
+		ul li {
 			padding: 0;
+			height: $bottom-sheet-item-height;
+
+			&.bottom-sheet-header {
+				height: $bottom-sheet-title-height;
+				line-height: $bottom-sheet-title-height;
+				margin-top: $bottom-sheet-padding-size * -1;
+				font-size: $bottom-sheet-title-font-size;
+				font-weight: $bottom-sheet-title-font-weight;
+				color: $bottom-sheet-title-color;
+			}
 
 			&.divider {
-				margin: $bottom-sheet-divider-margin;
+				height: $divider-height;
+				background: $divider-color;
+				margin: (($bottom-sheet-item-height - $divider-height) / 2) ($bottom-sheet-padding-size * -1) (($bottom-sheet-item-height - $divider-height) / 2) ($bottom-sheet-padding-size * -1);
 			}
 		}
 	}
+}
 
-	.material-icons {
-		color: $bottom-sheet-icons-color;
-		font-size: $bottom-sheet-icons-size;
-		@include square($bottom-sheet-icons-size);
-		margin: $bottom-sheet-icons-margin;
-		vertical-align: middle;
-	}
+@if( in-array( 'grid', $bottom-sheet ) ) {
+	.bottom-sheet-grid {
+		padding: $bottom-sheet-grid-padding;
 
-	@if( in-array( 'header', $bottom-sheet ) ) {
+		.row {
+			@include justify-content(space-between);
+			margin: 0 0 $large-gutter 0;
+
+			&:last-of-type {
+				margin: 0;
+			}
+		}
+
+		.grid-item {
+			text-align: center;
+			color: $bottom-sheet-color;
+			font-size: $bottom-sheet-font-size;
+			font-weight: $bottom-sheet-font-weight;
+			display: block;
+		}
+
+		.material-icons {
+			font-size: $bottom-sheet-grid-icon-size;
+			height: $bottom-sheet-grid-icon-size;
+			width: 100%;
+			margin: 0 0 ($gutter / 2) 0;
+		}
+
+		a {
+			color: $bottom-sheet-color;
+			@include transition(color $transition-small-duration $standard-transition);
+
+			@if ($amp == false) {
+				@media #{$medium-only} {
+					@include transition(color $transition-medium-duration $standard-transition);
+				}
+
+				@media #{$medium-up} {
+					@include transition(color $transition-large-duration $standard-transition);
+				}
+			}
+		}
+
+		a:hover .material-icons {
+			color: inherit;
+		}
+
 		&-header {
-			padding: $bottom-sheet-header-padding;
-
-			li.header {
-				color: $bottom-sheet-header-font-color;
-				height: $bottom-sheet-header-height;
-			}
+			height: $bottom-sheet-title-height;
+			line-height: $bottom-sheet-title-height;
+			margin-top: $bottom-sheet-grid-padding-size * -1;
+			font-size: $bottom-sheet-title-font-size;
+			font-weight: $bottom-sheet-title-font-weight;
+			color: $bottom-sheet-title-color;
 		}
-	}
 
-	@if( in-array( 'grid', $bottom-sheet ) ) {
-		&-grid {
-			padding: $bottom-sheet-grid-padding;
-
-			li {
-				margin: 0 0 $large-gutter 0;
-				@include flex-container($justify: space-between);
-
-				&:last-of-type {
-					margin: 0;
-				}
-
-				&.divider {
-					margin: $bottom-sheet-grid-divider-margin;
-				}
-
-				&.header {
-					color: $bottom-sheet-header-font-color;
-					height: $bottom-sheet-header-height;
-				}
-			}
-
-			&-item {
-				padding: 0;
-				@include flex-grow(1);
-			}
-
-			&-icon {
-				text-align: center;
-				vertical-align: middle;
-				margin: $bottom-sheet-grid-icon-margin;
-
-				.material-icons {
-					font-size: $bottom-sheet-grid-icon-size;
-					@include square($bottom-sheet-grid-icon-size);
-					margin: 0;
-					vertical-align: middle;
-				}
-			}
-
-			&-content {
-				text-align: center;
-				vertical-align: middle;
-				height: $bottom-sheet-grid-content-size;
-				line-height: $bottom-sheet-grid-content-size;
-				font-size: rem-calc(12px);
-				color: $bottom-sheet-header-font-color;
-			}
-		}
-	}
-
-	@if( in-array( 'music', $bottom-sheet ) ) {
-		&-music {
-			height: $bottom-sheet-music-height;
-
-			img {
-				@include square($bottom-sheet-music-image-size);
-				position: absolute;
-				top: $bottom-sheet-music-height - $bottom-sheet-music-image-size;
-				left: 0;
-			}
-
-			.determinate {
-				background: transparent;
-				top: $bottom-sheet-music-height - $bottom-sheet-music-image-size;
-				left: $bottom-sheet-music-image-size;
-				right: 0;
-				position: absolute;
-				width: calc(100% - #{$bottom-sheet-music-image-size});
-			}
-
-			.info {
-				position: absolute;
-				top: rem-calc(5px);
-				padding: 0 rem-calc(10px);
-				left: $bottom-sheet-music-image-size;
-				width: 75%;
-				line-height: $bottom-sheet-music-height;
-
-				@if( $amp == false ) {
-					@media #{$medium-up} {
-						width: 50%;
-					}
-				}
-
-				> div {
-					width: 100%;
-
-					@if( $amp == false ) {
-						@media #{$medium-down} {
-							float: left;
-							width: auto;
-						}
-					}
-				}
-			}
-
-			.band {
-				font-size: rem-calc(16px);
-			}
-
-			.track {
-				font-size: rem-calc(14px);
-				color: rgba($black, .38);
-			}
-
-			.controls {
-				width: calc(100% - 75% - #{$bottom-sheet-music-image-size});
-				position: absolute;
-				left: calc(#{$bottom-sheet-music-image-size} + 50%);
-				top: rem-calc(5px);
-				line-height: $bottom-sheet-music-height;
-
-				.material-icons {
-					width: calc(100% / 3.1); // TODO fix somehow
-					height: 100%;
-					text-align: center;
-					color: rgba($black, .54);
-				}
-
-				@if( $amp == false ) {
-					@media #{$medium-down} {
-						width: calc(100% - 50% - #{$bottom-sheet-music-image-size});
-
-						.material-icons:first-of-type, .material-icons:last-of-type {
-							display: none;
-						}
-
-						.material-icons {
-							width: 100%;
-						}
-					}
-				}
-			}
+		.divider {
+			height: $divider-height;
+			background: $divider-color;
+			margin: (($bottom-sheet-item-height - $divider-height) / 2) ($bottom-sheet-grid-padding-size * -1) (($bottom-sheet-item-height - $divider-height) / 2) ($bottom-sheet-grid-padding-size * -1);
 		}
 	}
 }
