--- a/stylesheets/scss/components/_typography.scss
+++ b/stylesheets/scss/components/_typography.scss
@@ -196,3 +196,11 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 }
+
+.body-1-light {
+	color: rgba($white, .87);
+}
+
+.body-1-dark {
+	color: rgba($black, .87);
+}
